vix/tests/checker-corpus/reject/duplicate-struct-field.vix
struct Config {
    name: String,
}

fn main() -> Config {
    Config { name: "a", name: "b" }
}
